# chatgpt-api-web-backend

./: Dockerfile  entrypoint.sh  pyproject.toml  uwsgi.ini
auth/: urls.py  views.py
backend/: settings.py  urls.py
openai/: urls.py  views.py
